# catlaser

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BRIEF.md  BUILD.md  Cargo.toml  REPO.md  buf.gen.yaml  deny.toml  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
app/ios/: Package.swift
crates/catlaser-common/: Cargo.toml
crates/catlaser-common/src/: constants.rs  frame_parser.rs  hopper.rs  lib.rs  servo_cmd.rs  servo_math.rs  trustzone.rs
crates/catlaser-mcu/: Cargo.toml  build.rs  memory.x
crates/catlaser-mcu-secure/: Cargo.toml  build.rs  memory.x
crates/catlaser-mcu-secure/.cargo/: config.toml
crates/catlaser-mcu-secure/src/: accessctrl.rs  dwell.rs  gateway.rs  handlers.rs  main.rs  sau.rs
crates/catlaser-mcu/src/: control.rs  dispenser.rs  gateway.rs  hopper.rs  main.rs  power.rs  safety.rs  state.rs  uart.rs
crates/catlaser-vision/: Cargo.toml  build.rs
crates/catlaser-vision/proptest-regressions/: tracker.txt
crates/catlaser-vision/src/: detect.rs  embed.rs  ipc.rs  main.rs  pipeline.rs  proto.rs  safety.rs  serial.rs  targeting.rs  tracker.rs
crates/catlaser-vision/src/camera/: .mod.rs.pending-snap  buffer.rs  error.rs  mod.rs  rkaiq.rs  v4l2.rs
crates/catlaser-vision/src/encoder/: error.rs  mod.rs  mpp.rs
crates/catlaser-vision/src/npu/: error.rs  mod.rs  rknn.rs  tensor.rs
crates/catlaser-vision/src/snapshots/: catlaser_vision__ipc__tests__behavior_command_wire.snap  catlaser_vision__ipc__tests__detection_frame_wire.snap  catlaser_vision__ipc__tests__session_request_wire.snap  catlaser_vision__ipc__tests__track_event_new_track_wire.snap  catlaser_vision__ipc__tests__track_event_track_lost_wire.snap  catlaser_vision__pipeline__tests__behavior_command_dispense_wire.snap  catlaser_vision__pipeline__tests__detection_frame_from_tracks.snap  catlaser_vision__pipeline__tests__identity_result_wire.snap  catlaser_vision__pipeline__tests__session_request_cat_detected.snap  catlaser_vision__pipeline__tests__track_event_new_track.snap  catlaser_vision__pipeline__tests__track_event_track_lost.snap
crates/catlaser-vision/src/streaming/: error.rs  mod.rs  publisher.rs  signaling.rs
deploy/: build-image.sh  catlaser-update.sh  flash.sh  setup-sdk.sh
docs/: ARCHITECTURE.md  BRIEF.md  BUILD.md
docs/decisions/: 001-unsafe-ffi-vision.md  002-unsafe-ffi-npu.md  003-unsafe-ffi-serial.md  004-unsafe-signal-handlers.md  005-rp2350-trustzone-migration.md  006-cloudflare-fronted-coordination-server.md  007-view-routed-cat-reid.md  008-pcb-design-via-circuit-synth.md
docs/resources/: buffa-research.md  cat-re-id-research.md  embassy-rp-research.md  livekit-webrtc-hw-encoded-video.md  luckfox-pico-buildroot-customization.md  onnx-to-rknn-int8-conversion-rv1106.md  rkaiq-isp-3a-integration-rv1106.md  rknn-rv1106-research.md  rockchip-mpp-encoding-research.md  rp2350-trustzone-m-firmware-partitioning.md  rust-rv1106-cross-compilation.md  v4l2-dmabuf-rv1106-research.md  yolov8n_rknn_int8_postprocessing.md
hardware/kicad/: README.md  pyproject.toml
hardware/kicad/catlaser_pcb/: __init__.py  _cli.py  camera_mipi.py  compute_sip.py  compute_storage.py  hopper_sensor.py  laser_driver.py  mcu_rp2350.py  pcb.py  power.py  servo_headers.py  top.py  wifi_rf.py
hardware/kicad/catlaser_pcb/fab/: __init__.py  bom.py  cpl.py
hardware/kicad/catlaser_pcb/layout/: __init__.py  board.py  camera_mipi.py  compute_sip.py  compute_storage.py  design_rules.py  hopper_sensor.py  laser_driver.py  mcu_rp2350.py  pours.py  power.py  route.py  servo_headers.py  wifi_rf.py
hardware/kicad/tests/: __init__.py  test_pipeline.py
models/calibration/: calibration.txt
models/convert/: convert_reid.py  convert_yolo.py
proto/: buf.yaml
python/: pyproject.toml
python/catlaser_brain/: __init__.py  __main__.py
python/catlaser_brain/auth/: __init__.py  acl.py  coord_client.py  handshake.py  handshake_response.py  identity.py  replay_cache.py
python/catlaser_brain/behavior/: dispense.py  engagement.py  pattern.py  profile.py  schedule.py  state_machine.py
python/catlaser_brain/daemon/: __init__.py  config.py  hopper.py  orchestrator.py  session_bridge.py  stream_bridge.py
python/catlaser_brain/identity/: catalog.py
python/catlaser_brain/ipc/: client.py  wire.py
python/catlaser_brain/network/: bind.py  handler.py  push.py  server.py  streaming.py  wire.py
python/catlaser_brain/proto/catlaser/app/v1/: app_pb2.py  app_pb2.pyi
python/catlaser_brain/proto/catlaser/detection/v1/: detection_pb2.py  detection_pb2.pyi
python/catlaser_brain/storage/: crud.py  db.py
python/tests/: test_app_api.py  test_behavior.py  test_bind.py  test_crud.py  test_daemon_config.py  test_daemon_hopper.py  test_dispense.py  test_engagement.py  test_identity.py  test_ipc.py  test_orchestrator.py  test_pattern.py  test_profile.py  test_push.py  test_replay_cache.py  test_schedule.py  test_session_bridge.py  test_stream_bridge.py  test_streaming.py
server/: .env.example  .gitignore  docker-compose.yml  drizzle.config.ts  eslint.config.js  package.json  tsconfig.json
server/drizzle/: 0000_init.sql
server/drizzle/meta/: 0000_snapshot.json  _journal.json
server/src/: index.ts  server.ts
server/src/db/: migrate.ts  schema.ts
server/src/lib/: account-deletion.ts  apple-id-token.ts  attestation-binding.ts  attestation-header.ts  attestation-plugin.ts  attestation-skew.ts  attestation-verify.ts  auth-hooks.ts  auth.ts  db.ts  device-acl.ts  device-attestation.ts  device-pairing.ts  env.ts  http.ts  (+11 more)
server/test/: account-deletion.test.ts  apple-id-token.test.ts  attestation-binding.test.ts  attestation-header.test.ts  attestation-plugin.test.ts  attestation-skew.test.ts  attestation-verify.test.ts  auth.test.ts  binding-enforcement.test.ts  device-identity.test.ts  device-paired-list.test.ts  device-pairing.test.ts  health.test.ts  idempotency.test.ts  magic-link-code.test.ts  magic-link.test.ts  protected-route.test.ts  rate-limit-plugin.test.ts  rate-limit.test.ts  session-attestation.test.ts  social-providers.test.ts  tailscale-host.test.ts  universal-link.test.ts
(+259 files in other folders)
