[project]
name = "catlaser-brain"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "livekit-api>=1.1.0",
    "protobuf>=5.29,<6",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
# Mirror clippy's "deny all + pedantic" — enable everything, suppress selectively.
select = ["ALL"]
ignore = [
    # -- Formatter conflicts (required when using ruff format) --
    "COM812",   # trailing-comma — handled by formatter
    "ISC001",   # single-line-implicit-string-concatenation — formatter conflict

    # -- Docstring style conflicts (mutually exclusive pairs; pick D211+D212) --
    "D203",     # one-blank-line-before-class — conflicts with D211
    "D213",     # multi-line-summary-second-line — conflicts with D212

    # -- Handled better by pyright --
    "ANN",      # flake8-annotations — pyright strict is more thorough

    # -- Not applicable to systems/embedded sidecar --
    "TD",       # flake8-todos — comment markers, not executable todo!() macros
    "FIX",      # flake8-fixme — same rationale
    "INP001",   # implicit-namespace-package — proto stubs lack __init__.py by design

    # -- Overly pedantic (noise, not signal) --
    "D105",     # missing-docstring-magic-method — dunder methods are self-documenting
    "D107",     # missing-docstring-init — redundant when class docstring exists
    "TRY301",   # raise-within-try — "abstract raise to inner function" is bad advice
    "TC003",    # typing-only-standard-library-import — false positives when used at runtime
]

[tool.ruff.lint.per-file-ignores]
# Generated protobuf code — hands off
"**/proto/**" = ["ALL"]
# Tests get relaxed rules matching your TS/Rust test overrides
"**/test_*" = [
    "S101",     # assert — tests need assert statements
    "PLR2004",  # magic-value-comparison — test values are self-documenting
    "SLF001",   # private-member-access — tests verify internal state
    "D",        # docstrings — tests describe themselves
    "ARG",      # unused-argument — fixtures
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["Path"]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# ---------------------------------------------------------------------------
# Pyright — strict mode mirrors TS strictTypeChecked + Rust type-safety lints
# ---------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
exclude = ["**/proto/**", ".venv"]
venvPath = "."
venv = ".venv"
