[package]
name = "catlaser-vision"
description = "Vision, tracking, targeting, and IPC daemon for the catlaser compute module"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
catlaser-common.workspace = true
buffa.workspace = true
bytes.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
libc.workspace = true
libloading.workspace = true
str0m.workspace = true
tungstenite.workspace = true
prost.workspace = true
crossbeam-channel.workspace = true
jpeg-encoder.workspace = true

[build-dependencies]
buffa-build.workspace = true

[dev-dependencies]
proptest.workspace = true
insta.workspace = true
tempfile.workspace = true

[lints]
workspace = true
